<resources>
    <string name="app_name">CreditCalc</string>
    <string name="sum">Amount</string>
    <string name="period">Period</string>
    <string name="date">Date of issue</string>
    <string name="percent">Percent</string>
    <string name="month">months</string>
    <string name="year">years</string>
    <string name="clear">Clear</string>
    <string name="calculate">Calculate</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="numberPeyment">#</string>
    <string name="datePayment">Date</string>
    <string name="principalDebt">Principal debt</string>
    <string name="addedPercent">Added percent</string>
    <string name="remainingDebt">Remaining debt</string>
    <string name="wrongAmount">Wrong credit amount value</string>
    <string name="wrongPeriod">Wrong credit period value</string>
    <string name="wrongPercent">Wrong percentage rate value</string>
    <string name="wrongPayment">Wrong payment amount value</string>
    <string name="save">Save</string>
    <string name="details">Details</string>
    <string name="total">Total:</string>
    <string name="totalPayment">Total payment:\u0020</string>
    <string name="totalPercent">Total percent:\u0020</string>
    <string name="enter">Enter the file name</string>
    <string name="file">File written in /Android/data/com.makienkovs.creditcalc/files/</string>
    <string name="external">External storage not writable</string>
    <string name="share">Share</string>
    <string name="calculation">The calculation of credit</string>
    <string name="payment">Payment</string>
    <string name="select">Select the calculated parameter:</string>
    <string name="paymentShould">Payment should be greater</string>
    <string name="paymentShouldNot">Payment should not be greater than amount</string>
    <string name="percentShouldNot">Percent should not be greater than 1200</string>
    <string name="schedule">Schedule</string>
</resources>